--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,3 +21,18 @@ services:
       - POSTGRES_HOST=postgres
       - POSTGRES_PASSWORD
       - MONGO_HOST=mongo:27017
+  rake:
+    build: .
+    command: docker/docker-rake-commands.sh
+    volumes:
+      - .:/myapp
+    depends_on:
+      - postgres
+      - mongo
+    ports:
+      - "3010:3010"
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_HOST=postgres
+      - POSTGRES_PASSWORD
+      - MONGO_HOST=mongo:27017
